create story-aside component
Perhaps name it story-card if we keep title looking similar to other cards, like event-card.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -83,6 +83,7 @@
 @import 'components/slideshow';
 @import 'components/social-links';
 @import 'components/speaker';
+@import 'components/story-aside';
 @import 'components/story-detail';
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
