--- a/src/templates/t03-program.twig
+++ b/src/templates/t03-program.twig
@@ -19,7 +19,7 @@
 
 {# For some reason the sidebar is not showing up. Due to conflicts with blocks? #}
 
-{% block sidebar %}
+{% block layout_sidebar %}
 
   {% include 'partials/page-nav.twig' with {
     items: [
@@ -35,7 +35,7 @@
 
 {% endblock %}
 
-{% block content %}
+{% block layout_content %}
 
   <div class="typography">
     <p class="intro">The Middlebury Institute Master of Public Administration (MPA) is designed for those who want to make a difference in confronting critical social problems, including hunger, poverty, disease, joblessness, and powerlessness.</p>
