--- a/src/scss/components/_homepage-hero.scss
+++ b/src/scss/components/_homepage-hero.scss
@@ -5,7 +5,7 @@
 
   @include media(sm) {
     height: auto;
-    padding-top: aspect-ratio(4, 3);
+    padding-top: percentage(3 / 4);
   }
 
   @include media(md) {
