--- a/src/scss/components/_page-hero.scss
+++ b/src/scss/components/_page-hero.scss
@@ -3,7 +3,7 @@
 
   @include media(md) {
     position: relative;
-    padding-top: aspect-ratio(4, 3);
+    padding-top: percentage(3 / 4);
     overflow: hidden;
   }
 }
