--- a/src/scss/components/_video.scss
+++ b/src/scss/components/_video.scss
@@ -12,7 +12,7 @@
   }
 
   .video.has-video & {
-    padding-top: aspect-ratio(16, 9);
+    padding-top: percentage(9 / 16);
     overflow: hidden;
 
     iframe {
@@ -26,7 +26,6 @@
 }
 
 .video__link {
-
 }
 
 .video__button {
@@ -42,6 +41,4 @@
 }
 
 .video__blurb {
-
 }
-
