--- a/src/templates/partials/filter.twig
+++ b/src/templates/partials/filter.twig
@@ -1,9 +1,9 @@
 <fieldset class="filter">
   <legend class="sr-only">{{label}}</legend>
 
-  <a href="#{{id}}" class="filter__button u-clearfix" data-toggle-target="#{{id}}" data-toggle-group="filters">
+  <a href="#{{id}}" class="filter__button clearfix" data-toggle-target="#{{id}}" data-toggle-group="filters">
     {{label}}
-    <span class="filter__button-icon u-float-right">
+    <span class="filter__button-icon float-right">
       <svg class="icon">
         <use xlink:href="#icon-arrow-left" />
       </svg>
