--- a/src/templates/partials/page-nav.twig
+++ b/src/templates/partials/page-nav.twig
@@ -16,12 +16,12 @@
 <div class="page-nav">
   <button class="page-nav__toggler" id="midd-page-nav-label" data-toggle-target=".js-page-nav">
     <span>Additional Navigation</span>
-    <span class="page-nav__icon u-is-toggled-hide">
+    <span class="page-nav__icon is-toggled-hide">
       <svg class="icon">
         <use xlink:href="#icon-arrow-down" />
       </svg>
     </span>
-    <span class="page-nav__icon u-is-toggled-show">
+    <span class="page-nav__icon is-toggled-show">
       <svg class="icon">
         <use xlink:href="#icon-arrow-up" />
       </svg>
