--- a/src/templates/partials/profile.twig
+++ b/src/templates/partials/profile.twig
@@ -12,7 +12,7 @@
     <h3 class="profile__name"><a href="#">Beryl Levinger</a></h3>
     <p class="profile__title"><em>Program Chair, Master of Public Administration and International Policy and Development</em></p>
     <p class="profile__meta">
-      <a href="mailto:blevinger@middlebury.edu" class="u-link-border">blevinger@middlebury.edu</a><br>
+      <a href="mailto:blevinger@middlebury.edu" class="link-border">blevinger@middlebury.edu</a><br>
       McCone Building M212
     </p>
     {% include 'partials/social-links.twig' with {
