--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -57,14 +57,14 @@
                 460 Pierce St<br>
                 Monterey, CA 93940</address>
 
-                <ul class="list u-mb-6">
+                <ul class="list mb-6">
                   <li class="list__item">
                     <span class="list__icon">
                       <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-map" />
                       </svg>
                     </span>
-                    <a href="#" class="u-link-border">View in Campus Map</a>
+                    <a href="#" class="link-border">View in Campus Map</a>
                   </li>
                   <li class="list__item">
                     <span class="list__icon">
@@ -72,15 +72,15 @@
                         <use xlink:href="#icon-calendar" />
                       </svg>
                     </span>
-                    <a href="#" class="u-link-border">Add to my calendar</a>
+                    <a href="#" class="link-border">Add to my calendar</a>
                   </li>
                 </ul>
 
                 <h3 class="event-detail__meta-title">Contact Organizer</h3>
 
                 <p class="event-detail__text">Priscilla Lorenzo<br>
-                  <a href="#" class="u-link-border">plorenzo@middlebury.edu</a><br>
-                  <a href="tel:" class="u-link-border">802-555-0000</a>
+                  <a href="#" class="link-border">plorenzo@middlebury.edu</a><br>
+                  <a href="tel:" class="link-border">802-555-0000</a>
                 </p>
 
                 </div>
