--- a/src/templates/t13-learning-approach.twig
+++ b/src/templates/t13-learning-approach.twig
@@ -7,7 +7,7 @@
       title: 'Learning Approach',
     } %}
 
-    <figure class="u-mb-6">
+    <figure class="mb-6">
       <picture>
         <source srcset="//placehold.it/1440x715" media="(min-width: 1200px)">
         <source srcset="//placehold.it/1200x475">
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-push-1 col-md-7">
-          <div class="u-mb-6">
+          <div class="mb-6">
             <p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores officia culpa, qui corrupti facere ipsum dolor praesentium odit quod, distinctio harum in quaerat adipisci vero. Omnis voluptates quo architecto totam.</p>
           </div>
         </div>
