--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -21,7 +21,7 @@
           <div class="col-md-push-1 col-md-7">
 
             <section class="section">
-              <p class="intro u-my-6">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
+              <p class="intro my-6">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
 
               {% include 'partials/social-links.twig' with {
                 items: social_links|merge(contact_social_links)
@@ -76,7 +76,7 @@
                           <use xlink:href="#icon-map" />
                         </svg>
                       </span>
-                      <a href="#" class="u-link-border">View in Google Maps</a>
+                      <a href="#" class="link-border">View in Google Maps</a>
                     </li>
                     <li class="list__item">
                       <span class="list__icon">
@@ -84,7 +84,7 @@
                           <use xlink:href="#icon-compass" />
                         </svg>
                       </span>
-                      <a href="#" class="u-link-border">Get Directions</a>
+                      <a href="#" class="link-border">Get Directions</a>
                     </li>
                   </ul>
 
