--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import '../../node_modules/bootstrap/scss/mixins/grid';
 @import '../../node_modules/bootstrap/scss/mixins/screen-reader';
 @import '../../node_modules/bootstrap/scss/mixins/clearfix';
+@import '../../node_modules/bootstrap/scss/utilities/clearfix';
 @import '../../node_modules/bootstrap/scss/utilities/screenreaders';
 
 @import '../../node_modules/swiper/dist/css/swiper';
@@ -92,13 +93,12 @@
 
 // utils
 @import 'utils/borders';
-@import 'utils/clearfix';
 @import 'utils/display';
 @import 'utils/float';
 @import 'utils/spacing';
 @import 'utils/text';
 @import 'utils/toggler';
 
-.u-link-border {
+.link-border {
   @include link-border();
 }
