--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -13,7 +13,7 @@
   <div class="container">
 
     <section class="section">
-      <div class="row u-text-center u-text-md-left">
+      <div class="row text-center text-md-left">
         <div class="col-md-6 col-lg-3 border-md-r mb-4 mb-lg-0">
           <div class="border-b border-md-b-0 pb-4 pb-md-0">
             {% include 'partials/card.twig' with {
