--- a/src/templates/t11-search-results.twig
+++ b/src/templates/t11-search-results.twig
@@ -12,11 +12,11 @@
       <div class="row">
         <div class="col-md-push-1 col-md-7">
 
-          <div class="u-mb-6">
+          <div class="mb-6">
             {% include 'partials/search-form.twig' %}
           </div>
 
-          <h2 class="u-mb-6 u-sans-serif">183 results for “water scarcity”</h2>
+          <h2 class="mb-6 sans-serif">183 results for “water scarcity”</h2>
 
           {% for i in 0..7 %}
 
