fix filter icon

--- a/src/templates/partials/filter.twig
+++ b/src/templates/partials/filter.twig
@@ -5,7 +5,7 @@
     {{label}}
     <span class="filter__button-icon float-right">
       <svg class="icon">
-        <use xlink:href="#icon-arrow-left" />
+        <use xlink:href="#icon-arrow-down" />
       </svg>
     </span>
   </a>
