--- a/src/templates/partials/panel.twig
+++ b/src/templates/partials/panel.twig
@@ -1,15 +1,16 @@
 {#TODO: change panel to use grid for panel__body and panel__footer#}
-<section class="panel{% if modifier %} panel--{{modifier}}{% endif %}">
-  <div class="panel__media">
+<section class="panel{% if modifier %} panel--{{modifier}}{% endif %}" aria-labelledby="midd-program-panel-label-{{label|slugify}}">
+  <figure class="panel__media">
     <picture>
-      <source srcset="http://unsplash.it/1440/600?random 1x, http://unsplash.it/2880/1200 2x" media="(min-width: 960px)">
+      <source srcset="http://unsplash.it/1440/600?random" media="(min-width: 960px)">
+      <source srcset="http://unsplash.it/960/540?random" media="(min-width: 580px)">
       {#TODO: need to load this on IE somehow without forcing an image on mobile#}
       <img src="" alt="">
     </picture>
-  </div>
+  </figure>
   <div class="panel__content">
-    <div class="panel__body">
-      <h1 class="panel__label">{{label}}</h1>
+    <div class="panel__primary">
+      <h1 class="panel__label" id="midd-program-panel-label-{{label|slugify}}">{{label}}</h1>
       <h2 class="panel__title">
         <a href="{{link_url}}" class="panel__link">{{title}} &rsaquo;</a>
       </h2>
@@ -17,7 +18,7 @@
       <a href="{{link_url}}" class="panel__button button button--secondary">{{link_text}}</a>
     </div>
     {% if list %}
-      <div class="panel__footer">
+      <div class="panel__secondary">
         <ul class="panel__list">
           {% for item in list %}
             <li class="panel__list-item">
