Remove extra paragraph elements from the class profile blurb. Fixes #18.

--- a/src/templates/partials/program-panel.twig
+++ b/src/templates/partials/program-panel.twig
@@ -15,11 +15,11 @@
 
     <figcaption class="program-panel__item program-panel__item--primary">
       <blockquote>
-        <p>&ldquo;I liked the Institute’s focused approach — there was nothing unnecessary or outdated in the curriculum. And we were all empowered to help influence and evolve the curriculum ourselves. My degree was a great combination of working and studying.&rdquo;</p>
-        <footer>
-          <p><strong>James Peter</strong><br>
-          Alumnus</p>
-        </footer>
+        <p>
+          &ldquo;I liked the Institute’s focused approach — there was nothing unnecessary or outdated in the curriculum. And we were all empowered to help influence and evolve the curriculum ourselves. My degree was a great combination of working and studying.&rdquo;<br><br>
+          <strong>James Peter</strong><br>
+          Alumnus
+        </p>
       </blockquote>
     </figcaption>
     <div class="program-panel__item program-panel__item--secondary">
