add course list component

--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -60,12 +60,7 @@
 
               <section class="profile-section" aria-labelledby="midd-profile-section-courses-label">
                 <h3 class="profile-section__title" id="midd-profile-section-courses-label">Courses Taught</h3>
-                <div class="typography">
-                  <ul>
-                    <li><a href="#">Lorem ipsum dolor sit amet</a></li>
-                    <li><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quo</a>d</li>
-                  </ul>
-                </div>
+                {% include 'partials/course-list.twig' %}
               </section>
 
               <section class="profile-section" aria-labelledby="midd-profile-section-interests-label">
@@ -82,8 +77,8 @@
                 <h3 class="profile-section__title" id="midd-profile-section-centers-label">Research Centers</h3>
                 <div class="typography">
                   <ul>
-                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                    <li><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quod</a></li>
+                    <li><a href="#">Lorem ipsum dolor sit amet</a></li>
+                    <li><a href="#">Nihil amet dolore ea reprehenderit voluptate beatae quod</a></li>
                   </ul>
                 </div>
               </section>
