--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'components/callout';
 @import 'components/card';
 @import 'components/carousel';
+@import 'components/course-list';
 @import 'components/drawer';
 @import 'components/event-card';
 @import 'components/event-detail';
