Make it clearer that the container div wraps singular paragraphs. Fixes #25.

--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -52,6 +52,10 @@
       </div>
     </section>
 
+  </div>
+
+  <div class="container">
+
     <div class="section">
       <div class="row">
         <div class="col-md-6 border-md-r">
