--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -16,6 +16,10 @@
 
   a {
     text-decoration: underline;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
 
   ul,
@@ -129,7 +133,7 @@
   h4 {
     font-size: 16px;
     font-weight: $font-weight-medium;
-    line-height: 22px;;
+    line-height: 22px;
     margin-top: 34px;
     margin-bottom: 24px;
 
