--- a/src/scss/components/_program-panel.scss
+++ b/src/scss/components/_program-panel.scss
@@ -2,32 +2,24 @@
   position: relative;
   background-color: $gray;
 
-  // HACK: need to use classes for this or a component
-  blockquote {
-    p {
-      font-family: $font-family-sans-serif;
-      color: $white;
-      line-height: 1.5;
-    }
-
-    > p {
-      margin-bottom: 50px;
-      text-indent: -.4em;
-
-      @include media(sm) {
-        font-size: 22px;
-      }
-
-      @include media(lg) {
-        font-size: 24px;
-      }
-    }
-  }
-
   @include media(md) {
     position: relative;
     overflow: hidden;
     padding-top: 56.25%;
+  }
+}
+
+.program-panel__text {
+  font-family: $font-family-sans-serif;
+  color: $white;
+  line-height: 1.5;
+
+  @include media(sm) {
+    font-size: 22px;
+  }
+
+  @include media(lg) {
+    font-size: 24px;
   }
 }
 
@@ -39,7 +31,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    opacity: .8;
+    opacity: 0.8;
   }
 
   img {
