--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -18,7 +18,7 @@
           <div class="col-md-6">
             {% embed 'partials/section.twig' with {
               title: 'Latest News',
-              class: 'u-mb-0',
+              class: 'mb-0',
               moreLinkText: 'More News',
               moreLinkHref: '#',
               labelledby: 'midd-latest-news-label'
