--- a/src/templates/t13-learning-approach.twig
+++ b/src/templates/t13-learning-approach.twig
@@ -31,8 +31,7 @@
               {% for i in 0..4 %}
                 <div class="col-md-4">
                   {% include 'partials/card.twig' with {
-                    image_lg: '//placehold.it/212x159',
-                    image: '//placehold.it/212x159',
+                    image: true,
                     title: 'Immersive Learning',
                     link: '#',
                     text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
