--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -9,24 +9,28 @@
 }
 
 .panel--primary {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(sm) {
     background-color: $middlebury-blue;
   }
 }
 
 .panel--secondary {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(sm) {
     background-color: $teal;
   }
 }
 
 .panel--tertiary {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(sm) {
     background-color: $dark-green;
   }
 }
 
 .panel__media {
+  img {
+    display: block;
+  }
+
   @include media(md) {
     @include absolute();
     z-index: 1;
@@ -35,31 +39,31 @@
 }
 
 .panel__content {
-  padding-left: map-get($grid-gutter-widths, 'xs') / 2;
-  padding-right: map-get($grid-gutter-widths, 'xs') / 2;
   padding-top: 45px;
   padding-bottom: 45px;
-
-  @include media(sm) {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
+  @include make-container();
 
   @include media(md) {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    align-items: center;
     z-index: 2;
-    @include absolute();
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
   }
 }
 
+.panel__row {
+  @include make-row();
+  align-items: center;
+  height: 100%;
+}
+
 .panel__primary {
+  @include make-col-ready();
+
   @include media(md) {
-    flex: 1;
-    max-width: 40%;
+    @include make-col(6);
   }
 }
 
@@ -100,21 +104,23 @@
 }
 
 .panel__button {
-  margin-bottom: 60px;
-
-  @include media(md) {
-    margin-bottom: 0;
-  }
 }
 
 .panel__secondary {
+  @include make-col-ready();
+
   @include media(md) {
-    flex: 0 0 auto;
-    max-width: 40%;
+    @include make-col(5);
+    margin-left: auto;
   }
 }
 
 .panel__list {
+  margin-top: 60px;
+
+  @include media(md) {
+    margin-top: 0;
+  }
 }
 
 .panel__list-item {
@@ -124,8 +130,6 @@
   @include media(sm) {
     padding-bottom: 30px;
     margin-bottom: 30px;
-  }
-  @include media(lg) {
   }
 
   &:not(:last-of-type) {
