--- a/src/templates/partials/page-hero.twig
+++ b/src/templates/partials/page-hero.twig
@@ -1,15 +1,13 @@
-<div class="container">
-  <div class="page-hero">
-    <div class="page-hero__media">
-      <picture>
-        <source srcset="http://placehold.it/1380x1035 1x, http://placehold.it/2760x2070 2x" media="(min-width: 580px)">
-        <source srcset="http://placehold.it/580x435 1x, http://placehold.it/1160x870 2x">
-        <img src="http://placehold.it/1380x1035" srcset="http://placehold.it/1380x1035 1x, http://placehold.it/2760x2070 2x" alt="">
-      </picture>
-    </div>
-    <div class="page-hero__content">
-      {% block content %}{% endblock %}
-    </div>
+<div class="page-hero">
+  <div class="page-hero__media">
+    <picture>
+      <source srcset="http://placehold.it/1440x1080" media="(min-width: 580px)">
+      <source srcset="http://placehold.it/720x540">
+      <img src="http://placehold.it/1440x1080" alt="">
+    </picture>
+  </div>
+  <div class="page-hero__content">
+    {% block content %}{% endblock %}
   </div>
 </div>
 
