--- a/src/scss/components/_course-list.scss
+++ b/src/scss/components/_course-list.scss
@@ -10,9 +10,9 @@
 }
 
 .course-list__meta {
-  margin-bottom: 2rem;
   font-family: $font-family-sans-serif;
-  // font-size: 14px;
+  font-size: 14px;
+  margin-bottom: 2rem;
 }
 
 .course-list__list {
@@ -23,53 +23,28 @@
 .course-item {
   &:not(:last-of-type) {
     border-bottom: 1px solid $line-gray;
-    // margin-bottom: 1rem;
-    // padding-bottom: 1rem;
   }
 }
 
 .course-item__title {
-  // margin-bottom: 1rem;
 }
 
 .course-item__link {
-  display: block;
+  display: flex;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  @include clearfix();
-  // transition: background-color 0.2s;
-
-  // &.is-toggled,
-  &:hover {
-    // background-color: $line-gray;
-    text-decoration: none;
-
-    .course-item__label {
-      text-decoration: underline;
-    }
-  }
 }
 
 .course-item__label {
-  // flex: 1 0 auto;
-  // max-width: 100%;
-  // float: left;
-  // display: block;
-
-  .icon {
-    float: left;
-  }
 }
 
 .course-item__icon {
-  // flex: 0 0 auto;
-  // margin-left: auto;
-  // display: block;
-  // float: right;
-  // margin-right: 0.5rem;
-  width: 0.5rem;
-  height: 0.5rem;
-  margin-right: 0.5rem;
+  flex: 0 0 auto;
+  align-self: center;
+  width: 16px;
+  height: 16px;
+  margin-left: auto;
+  padding-left: 0.5rem;
 
   svg {
     fill: $gray;
@@ -77,7 +52,7 @@
 }
 
 .course-item__icon--open {
-  .course-item.is-toggled & {
+  .course-item__link.is-toggled & {
     display: none;
   }
 }
@@ -85,23 +60,22 @@
 .course-item__icon--close {
   display: none;
 
-  .course-item.is-toggled & {
+  .course-item__link.is-toggled & {
     display: inline-block;
   }
 }
 
 .course-item__markers {
-  // margin-left: 0.5rem;
+  font-size: 16px;
 }
 
 .course-item__content {
-  // margin-top: 1rem;
   padding-left: 1rem;
 
-  .course-item.has-toggler & {
+  &.has-toggler {
     display: none;
   }
-  .course-item.is-toggled & {
+  &.is-toggled {
     display: block;
   }
 }
