add border to callout links so they are obvious links

--- a/src/templates/partials/callout-links.twig
+++ b/src/templates/partials/callout-links.twig
@@ -4,7 +4,7 @@
   <ul class="callout-links__list">
     {% for item in items %}
       <li class="callout-links__item">
-        <a href="{{item.url}}" class="callout-links__link">{{item.text}}</a>
+        <a href="{{item.url}}" class="callout-links__link link-border">{{item.text}}</a>
       </li>
     {% endfor %}
   </ul>
