add typography class so generic type is styled
This area is instended to be a blurb but we may want support for headings and other elements

--- a/src/templates/partials/page-hero.twig
+++ b/src/templates/partials/page-hero.twig
@@ -6,7 +6,7 @@
       <img src="http://placehold.it/1440x810" alt="">
     </picture>
   </div>
-  <div class="page-hero__content">
+  <div class="page-hero__content typography">
     {% block content %}{% endblock %}
   </div>
 </div>
