--- a/src/templates/partials/profile.twig
+++ b/src/templates/partials/profile.twig
@@ -10,10 +10,12 @@
   </div>
   <div class="profile__content">
     <h3 class="profile__name"><a href="#">Beryl Levinger</a></h3>
-    <p class="profile__title"><em>Program Chair, Master of Public Administration and International Policy and Development</em></p>
-    <p class="profile__meta">
-      <a href="mailto:blevinger@middlebury.edu" class="link-border">blevinger@middlebury.edu</a><br>
-      McCone Building M212
+    <p class="profile__title">Program Chair, Master of Public Administration and International Policy and Development</p>
+    <p class="profile__info">
+      <strong>Email:</strong> <a href="mailto:blevinger@middlebury.edu" class="link-border">blevinger@middlebury.edu</a><br>
+      <strong>Tel:</strong> 617-324-7535<br>
+      <strong>Office:</strong> McCone Building M212<br>
+      <strong>Office Hours:</strong> Tuesdays 3-4pm, Thursdays 11am-12pm
     </p>
     {% include 'partials/social-links.twig' with {
       items: social_links
