--- a/src/templates/partials/profile-explorer.twig
+++ b/src/templates/partials/profile-explorer.twig
@@ -19,9 +19,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-push-1 col-md-11">
-          {% for i in 0..3 %}
-            {% include 'partials/profile.twig' %}
-          {% endfor %}
+          <ol class="list list--lg">
+            {% for i in 0..3 %}
+              <li class="list__item">
+                {% include 'partials/profile.twig' %}
+              </li>
+            {% endfor %}
+          </ol>
         </div>
       </div>
     </div>
