revise profile spotlight item markup so media is before content

--- a/src/scss/components/_profile-spotlight-item.scss
+++ b/src/scss/components/_profile-spotlight-item.scss
@@ -4,33 +4,44 @@
 
   @include media(md) {
     flex-direction: column;
+    height: 100%;
   }
-}
-
-.profile-spotlight-item__content {
-  flex: 1;
-}
-
-.profile-spotlight-item__name {
-  margin-bottom: 10px;
-}
-
-.profile-spotlight-item__title {
-}
-
-.profile-spotlight-item__text {
 }
 
 .profile-spotlight-item__media {
   margin-left: 10px;
-  flex: 0 0 auto;
+  flex: 1 0 auto;
+  order: 2;
 
   @include media(sm) {
     margin-left: 40px;
   }
 
   @include media(md) {
+    margin-top: auto;
+    flex: 0 0 auto;
     margin-left: 0;
-    flex: 1;
   }
+}
+
+.profile-spotlight-item__content {
+  flex: 1 1 auto;
+  order: 1;
+
+  @include media(md) {
+    padding-bottom: 40px;
+  }
+}
+
+.profile-spotlight-item__name {
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+
+.profile-spotlight-item__title {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.profile-spotlight-item__text {
 }
